--- a/WEBTEKNOLOJİLERİPROJE/style.css
+++ b/WEBTEKNOLOJİLERİPROJE/style.css
@@ -1,6 +1,16 @@
 .navbar{
     background: rgb(49, 1, 1);
+    position: fixed;
 }
 body{
     background: rgb(49, 1, 1);
+}
+.nav-item.active{
+    background: #666b71;
+    border-radius: 5px;
+}
+.nav-item:hover{
+    background: #a3abb5;
+    border-radius: 5px;
+    transition: .8s;
 }
